# esp-hosted

./: README.md  release_note.md
ble/: .gitignore  CMakeLists.txt  ble_flashing.sh  cp_to_imx.sh  upload_to_drive.sh  vu.key
ble/components/ble/: CMakeLists.txt  tm_ble_gatts_server.c
ble/components/ble_gatts/: tm_ble_gatts_server.c  tm_ble_gatts_server.h
ble/components/ble_gatts/test/: CMakeLists.txt  test_ble_gatts.c
ble/components/crypto/: CMakeLists.txt  crypto.c  crypto.h
ble/components/crypto/test/: CMakeLists.txt  test_crypto.c
ble/components/tm/: CMakeLists.txt  tm_spi_slave_driver.c  tm_spi_slave_driver.h
ble/components/tm/test/: CMakeLists.txt  test_tm.c
ble/main/: CMakeLists.txt  tm_atcmd.c  tm_atcmd.h  tm_ble.c  tm_ble.h
ble/test/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
ble/test/main/: example_unit_test_test.c  unit_test_test.c
common/: esp_hosted_config.pb-c.c
common/include/: adapter.h  esp_hosted_config.pb-c.h
common/proto/: esp_hosted_config.proto
docs/common/: ctrl_apis.md
esp/esp_driver/network_adapter/: cp_to_imx.sh  default_esp32_wifi_nvs.csv  sdkconfig  sdkconfig.old
esp/esp_driver/network_adapter/certs/: ca.crt  client_cert.crt  client_priv_key.key  thing.crt  thing.key
esp/esp_driver/network_adapter/components/at_cmd_stack/: CMakeLists.txt  Kconfig  README.md
esp/esp_driver/network_adapter/components/at_cmd_stack/include/: at_cmd_app.h  at_cmd_quectel_helpers.h  at_cmd_stack_types.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/app/: at_cmd_app.c  at_cmd_app_helper.c
esp/esp_driver/network_adapter/components/at_cmd_stack/src/common/: app_and_service.c  string_handling.c
esp/esp_driver/network_adapter/components/at_cmd_stack/src/common/include/: app_and_service.h  at_cmd_stack_types.h  common_helpers.h  string_handling.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/parse_and_exec/: parse_and_exec_cmd_handlers_list.c  parse_and_exec_cmd_handlers_list.h  parse_and_exec_constants.c  parse_and_exec_constants.h  parse_and_exec_core.c  parse_and_exec_helpers.c  parse_and_exec_helpers.h  parse_and_exec_tmp_buff.c  parse_and_exec_tmp_buff.h  parse_and_exec_types.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/parse_and_exec/cmd_handlers/: parsetest_parse_exec_handler.c  parsetest_parse_exec_handler.h  qmtcfg_parse_exec_handler.c  qmtcfg_parse_exec_handler.h  qmtclear_parse_exec_handler.c  qmtclear_parse_exec_handler.h  qmtconn_parse_exec_handler.c  qmtconn_parse_exec_handler.h  qmtdisc_parse_exec_handler.c  qmtdisc_parse_exec_handler.h  qmtdump_parse_exec_handler.c  qmtdump_parse_exec_handler.h  qmtopen_parse_exec_handler.c  qmtopen_parse_exec_handler.h  qmtpubex_parse_exec_handler.c  qmtpubex_parse_exec_handler.h  qmtrecv_parse_exec_handler.c  qmtrecv_parse_exec_handler.h  qmtsub_parse_exec_handler.c  qmtsub_parse_exec_handler.h  qmtuns_parse_exec_handler.c  qmtuns_parse_exec_handler.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/parse_and_exec/include/: at_cmd_parse_and_exec.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/port/: sys_common_funcs.h
esp/esp_driver/network_adapter/components/at_cmd_stack/src/quectel_helpers/: at_cmd_quectel_helpers.c
esp/esp_driver/network_adapter/components/at_cmd_stack/src/services/mqtt_client/: mqtt_service_configs.c  mqtt_service_core.c  mqtt_service_helpers.c
esp/esp_driver/network_adapter/components/at_cmd_stack/src/services/mqtt_client/include/: mqtt_service.h  mqtt_service_configs.h  mqtt_service_helpers.h  mqtt_service_types.h
esp/esp_driver/network_adapter/components/at_cmd_stack/test/: CMakeLists.txt  partitions.csv
esp/esp_driver/network_adapter/components/at_cmd_stack/test/main/: CMakeLists.txt  app_main.c  at_cmd_test.c  at_cmd_test.h  common_test_helpers.c  common_test_helpers.h  mqtt_test.c  mqtt_test.h  parse_test.c  parse_test.h
esp/esp_driver/network_adapter/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  at-commands-library.c  at-lib.c  at-lib.h  slave_control.c  slave_control.h  spi_slave_api.c  tm_ble.c  tm_ble.h  tm_ble_gatts_server.c  tm_ble_gatts_server.h  tm_spi_slave.c  tm_spi_slave.h  tm_spi_slave_driver.c  tm_spi_slave_driver.h
esp/esp_driver/network_adapter/main/crypto/: crypto.c  crypto.h
esp/esp_driver/network_adapter/main/tm/: ion_ble.c  (+9 more)
esp_hosted_ng/host/: Makefile  esp_cfg80211.c  esp_cmd.c  main.c
esp_hosted_ng/host/include/: esp_stats.h
esp_hosted_ng/host/spi/: esp_spi.c  esp_spi.h
host/control_lib/include/: ctrl_api.h
host/control_lib/src/: ctrl_api.c  ctrl_core.c
host/linux/host_control/c_support/: Makefile  ctrl_config.h  test.c  test.h  test_utils.c
releases/: ble_flashing.sh
(+15 files in other folders)
